first steps for new website

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Stránky oddílu sportovního šermu Brno - Židenice">
+    <meta name="author" content="Jan Štourač">
+    <meta name="keywords" content="šerm,židenice,sportovní,oddíl,brno,sokol">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Šerm Židenice</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +42,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap
+                    <i class="fa fa-play-circle"></i>  <span class="light">Šerm</span> Židenice
                 </a>
             </div>
 
@@ -53,13 +54,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Úvod</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#trainings">Tréninky</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#enrollment">Nábor</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#blueboard">Nástěnka</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#photo">Foto</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Kontakt</a>
                     </li>
                 </ul>
             </div>
@@ -73,9 +83,9 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Grayscale</h1>
-                        <p class="intro-text">A free, responsive, one page Bootstrap theme.<br>Created by Start Bootstrap.</p>
+                    <div class="col-md-8 col-md-offset-2"/>
+                        <h1 class="brand-heading">Šerm Židenice</h1>
+                        <p class="intro-text">Stránky oddílu sportovního šermu<br>Brno - Židenice</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -89,10 +99,133 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>Šerm Židenice</h2>
+                <p>Oddíl sportovního šermu TJ Sokol Brno-Židenice je menší oddíl čítající přibližně 15 členů, vedený zkušeným šermířem <b>Arnoštem Sedlákem</b>.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Trainings Section -->
+    <section id="trainings" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Tréninky</h2>
+                <table style="font-size:24px;padding:10px">
+                     <tr>
+                       <td><b>Pondělí</b></td>
+                       <td>19:00 - 21:00 *</td>
+                     </tr>
+                     <tr>
+                       <td><b>Středa</b></td>
+                       <td>18:00 - 20:00</td>
+                     </tr>
+                </table>
+                <p>* Nováčci cvičí v pondělí.</p>
+                <p>Trénujeme v budově TJ Sokol Židenice - Gajdošova 18 (viz <a class="page-scroll" href="#contact">kontakt</a>)
+                   po celý rok vyjma školních prázdnin (červenec a srpen se necvičí).
+                   Trénink vede hlavní trenér ing. Arnošt Sedlák.</p>
+
+                   <br><p>Trénink se skládá:</p>
+
+<p><b>Zahřívací cvičení</b><br>
+
+Preferováno je skákání na švihadle, celkem asi 20 minut.</p>
+
+<p><b>Rozcvička</b><br>
+
+Jako rozcvičku používáme sérii cvičení od prof. Elio Malena &quot;La Ginnastica per la Scherma&quot;. Jde o sestavu 47 cviků systematicky rozvíjejících pružnost, sílu, výbušnost a kooordinaci se stoupající obtížností - trvá asi 20 minut.</p>
+
+<p><b>Cvičení nohou</b><br>
+
+Cvičení nohou je naprostým základem sportovního šermu, a proto je mu zejména zpočátku věnována velká pozornost. Cvičí se série posunů, odsunů a zejména výpad. Začátečnící stráví první měsíce cvičením nohou celý zbytek tréninku. </p>
+
+<p><b>Cvičení šermířské techniky</b><br>
+
+Je vyhrazeno lehce pokročilým, kteří již cvičí se zbraní (přibližně po prvních 3 měsících trénování). Jde o dobu vyhrazenou procvičování určité bojové akce ve dvojicích. Probíhá trénink různých zbraní současně. Pro začínající je vyhrazeno trénování boje fleretem. Nácvik techniky trvá přibližně 50 minut.</p>
+
+<p><b>Volný šerm</b><br>
+
+Je vyhrazen pokročilým, kteří již strávili dostatečnou dobu nácvikem techniky. Zápolí se ve dvojicích podle pravidel FIE. Trvá obvykle kolem 20 minut. K šermu kordem, fleretem a šavlí máme elektrický aparát s podstropním vedením.</p><br>
+
+<p><b>Zázemí</b><br>
+
+Převlékáme se přímo v tělocvičně. Děvčata mají vlastní místnost. K uskladnění věcí jsou k dispozici skříňky. Je možné využívat i sprchy.</p>
+
+<p><b>Cena</b><br>
+
+Cena je do 18ti let 1000 Kč na rok, od 18ti let 1300 Kč na kalendářní rok 2015.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Enrollment Section -->
+    <section id="enrollment" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Nábor nových členů</h2>
+
+    <p>Oddíl rozšiřuje své řady o nové zájemce. V našem oddíle se cvičí boj fleretem, kordem i šavlí. Trénujeme sportovce obou pohlaví. Pokud máte o sportovní šerm zájem, neváhejte a přijďte se k nám (viz <a href="kontakt.htm">kontakt</a>) podívat na pondělní trénink v 19:00 do budovy židenického Sokola (vyjma letních prázdnin). Vzhledem k tomu, že často se cvičí ve dvojicích, doporučujeme přijít s nějakým kamarádem / kamarádkou nebo ve větší skupince, ale můžete přijít i sami. Více se dozvíte v sekci <a href="treninky.htm">tréninky.</a></p>
+
+    <b>Co budu pro začátek potřebovat?</b><br>
+
+    Pro prvních pár tréninků pouze cvičební úbor a švihadlo. Poté rukavici a pevnější rolák.<br><br>
+
+    <b>Jaké vybavení si budu muset koupit?</b><br>
+
+    Ze začátku opravdu žádné, zapůjčujeme (oproti záloze) oddílové vybavení. Později (~rok) vám rádi poradíme s výběrem.<br><br>
+
+    <b>Kolik se platí za tréninky?</b><br>
+
+    Trénink je zdarma, platí se ale sokolské a oddílové příspěvky<br>(studenti 1100 Kč na kalendářní rok, pracující 1300 Kč).<br><br>
+
+    <b>Co je nejdůležitější?</b><br>
+
+    Chtít! Vydržet! Člověk se nenaučí šermovat hned.<br><br>
+
+    <b>Co je výhodou sportovního šermu?</b><br>
+
+    Soupeř může být vašim kamarádem. Při šermu mu nemůžete ublížit, ani když se ho budete snažit porazit ze všech sil.<br><br>
+
+    <b>Je sportovní šerm nebezpečný?</b><br>
+
+    Není (na 99%). Zbraně, oblečení a masky prošly velkým vývojem. Nejslabším článkem je vždy lidský faktor. Zásada "zbraň v ruce, maska na hlavě" se musí dodržovat vždy.<br><br>
+
+    <b>Koho hledáme?</b><br>
+
+    Lidi nadšené pro tento sport, začátečníky, studenty (SŠ, VŠ), pracující.<br><br>
+
+    <b>Na vaše dotazy rádi odpovíme.</b><br>
+
+    <a href="mailto:sermzidenice&#64email&#46;&#99;&#122">sermzidenice&#64email&#46;&#99;&#122</a><br>
+
+  </div>
+</div>
+</section>
+
+
+    <!-- Blueboard Section -->
+    <section id="blueboard" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Nástěnka</h2>
+                <!-- <div class="embed-responsive embed-responsive-4by3">
+                    <iframe src="http://www.blueboard.cz/kniha/xentf3v46rvn7beo4cum168i9f8puu" width="500px" height="400px" frameborder="0" scrolling="yes"/>
+                </div> -->
+
+                <!-- <a href="#" class="btn" id="openBtn">Open modal</a>
+
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog">
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal">×</button>
+			<h3>Dialog</h3>
+	</div>
+	<div class="modal-body">
+      <iframe src="" style="zoom:0.60" frameborder="0" height="250" width="99.6%"></iframe>
+	</div>
+	<div class="modal-footer">
+		<button class="btn" data-dismiss="modal">OK</button>
+	</div>
+</div> -->
             </div>
         </div>
     </section>
@@ -139,7 +272,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright &copy; Šerm Židenice 2015</p>
         </div>
     </footer>
 
